# brainstorming

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: agent-workflow.md  coding-standards.md  setup-project-brief.md
docs/plans/: 2026-06-06-natural-language-draft-inbox-redesign.md  2026-06-06-simple-draft-agent-workflow-implementation.md
src/brainstorm_tool/: __init__.py  api.py  cli.py  exceptions.py  models.py  store.py  web.py
src/brainstorm_tool/static/: app.css  app.js  index.html  preview.css  preview.html
tests/: test_api.py  test_cli.py  test_store.py  test_web.py
