[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainstorm-tool"
version = "0.1.0"
description = "Local-first brainstorm workspace with CLI and browser dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brainstorm Tool Maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.9",
    "pre-commit>=3.7",
    "ruff>=0.4",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
brainstorm = "brainstorm_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brainstorm_tool = ["static/*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "ANN",
    "S",
    "RUF",
    "ERA",
    "PTH",
    "SIM",
    "TRY",
    "LOG",
    "G",
]
ignore = [
    "S101",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["brainstorm_tool"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
